add getUserById & updateUser
