# controllers/usersController.js
@@ -9,10 +9,10 @@ const generateToken = (user) => {
 // Function to create default users
 const createDefaultUsers = async () => {
   const defaultUsers = [
-    { email: 'admin@example.com', password: 'admin123', role: 'ADMIN', phone: '123456789' },
-    { email: 'baker@example.com', password: 'baker123', role: 'BAKER', phone: '987654321' },
-    { email: 'user@example.com', password: 'user123', role: 'USER', phone: '456123789' },
-    { email: 'user2@example.com', password: 'user123', role: 'USER', phone: '436624729' },
+    { email: 'admin@example.com', password: 'admin123', role: 'ADMIN', phone: '123456789', name: 'Admin', lastName: 'User', image: '' },
+    { email: 'baker@example.com', password: 'baker123', role: 'BAKER', phone: '987654321', name: 'Baker', lastName: 'User', image: '' },
+    { email: 'user@example.com', password: 'user123', role: 'USER', phone: '456123789', name: 'User', lastName: 'One', image: '' },
+    { email: 'user2@example.com', password: 'user123', role: 'USER', phone: '436624729', name: 'User', lastName: 'Two', image: '' },
   ];
 
   for (const user of defaultUsers) {
@@ -23,6 +23,9 @@ const createDefaultUsers = async () => {
       password: hashedPassword,
       role: user.role,
       phone: user.phone,
+      name: user.name,
+      lastName: user.lastName,
+      image: user.image,
       enabled: true,
     };
     users.push(newUser);
@@ -33,7 +36,13 @@ const createDefaultUsers = async () => {
 createDefaultUsers();
 
 const register = async (req, res) => {
-  const { email, password, role, phone } = req.body;
+  const { email, password, role, phone, name, lastName } = req.body;
+  let image64 = '';
+  const image = req.file;
+  if(image){
+    image64 = image.buffer.toString('base64');
+  }
+
   const hashedPassword = await bcrypt.hash(password, 10);
   const newUser = {
     id: users.length ? users[users.length - 1].id + 1 : 1,
@@ -41,6 +50,9 @@ const register = async (req, res) => {
     password: hashedPassword,
     role,
     phone,
+    name,
+    lastName,
+    image: image64,
     enabled: true,
   };
   users.push(newUser);
@@ -52,7 +64,7 @@ const login = async (req, res) => {
   const user = users.find(u => u.email === email);
   if (user && await bcrypt.compare(password, user.password)) {
     const token = generateToken(user);
-    res.json({ token, name: user.email, role: user.role });
+    res.json({ token, name: user.email, role: user.role, userId: user.id });
   } else {
     res.status(401).json({ message: 'Invalid credentials' });
   }
@@ -60,7 +72,7 @@ const login = async (req, res) => {
 
 const changePassword = async (req, res) => {
   const { id, oldPassword, newPassword } = req.body;
-  const user = users.find(u => u.id == id);
+  const user = users.find(u => u.id === id);
   if (user && await bcrypt.compare(oldPassword, user.password)) {
     user.password = await bcrypt.hash(newPassword, 10);
     res.json({ message: 'Password updated' });
@@ -82,7 +94,7 @@ const forgotPassword = (req, res) => {
 
 const enableUser = (req, res) => {
   const { id } = req.body;
-  const user = users.find(u => u.id == id);
+  const user = users.find(u => u.id === id);
   if (user) {
     user.enabled = true;
     res.json({ message: 'User enabled' });
@@ -102,6 +114,39 @@ const disableUser = (req, res) => {
   }
 };
 
+const getUserById = (req, res) => {
+  const { id } = req.params;
+  const user = users.find(u => u.id == id);
+  if (user) {
+    res.json(user);
+  } else {
+    res.status(404).json({ message: 'User not found' });
+  }
+};
+
+const editUser = async (req, res) => {
+  const id = req.userId;
+  const { firstName, lastName, phone } = req.body;
+  let image64 = '';
+  const image = req.file;
+  if (image) {
+    image64 = image.buffer.toString('base64');
+  }
+
+  const user = users.find(u => u.id == id);
+  if (user) {
+    user.name = firstName || user.name;
+    user.lastName = lastName || user.lastName;
+    user.phone = phone || user.phone;
+    if (image64) {
+      user.image = image64;
+    }
+    res.json({ message: 'User updated successfully', user });
+  } else {
+    res.status(404).json({ message: 'User not found', id });
+  }
+};
+
 module.exports = {
   register,
   login,
@@ -109,4 +154,6 @@ module.exports = {
   forgotPassword,
   enableUser,
   disableUser,
+  getUserById,
+  editUser
 };
